# md2docx

./: .gitignore  AGENTS.md  LICENSE.txt  README.md  config.yaml  pyproject.toml  requirements.txt
.agents/skills/: md2docx.md
.agents/skills/md2docx/: SKILL.md
example/: sample.md
md2docx/: __init__.py  builder.py  cli.py  config.py  default_config.yaml  math_handler.py  parser.py  styles.py  svg_com.py  svg_utils.py
scripts/: install_skill.py
