[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "md2docx"
version = "0.1.0"
description = "Convert Markdown to Word document"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Liu Yanrui", email = "rockyrliu@qq.com"},
]
dependencies = [
    "latex2mathml>=3.81.0",
    "lxml>=6.1.1",
    "mistune>=3.2.1",
    "pillow>=12.2.0",
    "pycairo>=1.29",
    "python-docx>=1.2.0",
    "pyyaml>=6.0.3",
    "rlpycairo>=0.4.0",
    "svglib>=2.0.2",
]

[project.scripts]
md2docx = "md2docx.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["md2docx"]
