[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "md2docx"
version = "0.1.0"
description = "Convert Markdown to Word document"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Liu Yanrui", email = "rockyrliu@qq.com"},
]
dependencies = [
    "latex2mathml>=3.81.0",
    "lxml>=6.1.1",
    "mistune>=3.2.1",
    "pillow>=12.2.0",
    "python-docx>=1.2.0",
    "pywin32>=305; sys_platform == 'win32'",
    "pyyaml>=6.0.3",
]

[project.scripts]
md2docx = "md2docx.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["md2docx"]
